# unified-multi-agent-coordination

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REPRODUCING.md  coverage-v07.json  docker-compose.distributed.yml  docker-compose.etcd-distributed.yml  docker-compose.system.yml  docker-compose.yml  evidence-manifest.json  main.py  pyproject.toml
.github/workflows/: defense-gates.yml
corpus/v0.2/: label-signoff.json  manifest.json
corpus/v0.2/hidden/: reference-labels.json
corpus/v0.2/public/: cases.json
corpus/v0.2/review/: label-review-packet.json
corpus/v0.3/: label-provenance.json  manifest.json
corpus/v0.3/hidden/: reference-labels.json
corpus/v0.3/public/: cases.json
corpus/v0.3/review/: label-review-packet.json
corpus/v0.4/: label-provenance.json  manifest.json
corpus/v0.4/hidden/: reference-labels.json
corpus/v0.4/public/: cases.json  development-examples.json
corpus/v0.5/: label-provenance.json  manifest.json
corpus/v0.5/development/: cases.json
corpus/v0.6/: label-provenance.json  manifest.json  protocol-lock.json  superseded.json
corpus/v0.7/: label-provenance.json  manifest.json  protocol-lock.json
corpus/v0.8/: manifest.json
corpus/v0.8-development-iteration-1/: manifest.json
demo_runs/: end_to_end_scenarios.json  etcd-distributed-system-report.json
demo_runs/legacy/: README.md
demo_runs/v0.7/: deterministic-benchmark.json
demo_runs/v0.8/: deterministic-benchmark-final.json  deterministic-benchmark.json
e/: artifact-manifest.json
e/v5/: collection-complete.json  provenance.json  timings-v0.5.0-rerun.json  timings-v0.5.0.json
e/v7/: evidence-manifest.json
scripts/: check_coverage.py  check_evidence.py  generate_artifact_manifest.py  generate_v07_evidence_manifest.py  generate_v07_figures.py  merge_v07_evidence_manifest.py  supplementary_semantic_analysis_v07.py
src/unified_multi_agent_coordination/: __init__.py  a2a_adapter.py  a2a_fixture_agent.py  a2a_replay_v07.py  admission.py  agent_registry.py  auxiliary.py  baseline_evaluation.py  cluster.py  cluster_discovery.py  consensus_campaign.py  coordination_agent.py  coordination_ledger.py  coordination_sdk.py  coordination_store.py  coordinator_node.py  corpus.py  corpus_v04.py  corpus_v05.py  corpus_v06.py  corpus_v07.py  corpus_v08.py  defense_study.py  defense_study_v04.py  defense_study_v05.py  defense_study_v06.py  defense_study_v07.py  defense_study_v08.py  distributed_system_tests.py  docker_system_tests.py  end_to_end_scenarios.py  etcd_client.py  etcd_store.py  etcd_system_tests.py  evidence_preflight.py  feasibility.py  fixture_registry.py  hybrid_strategy_validation.py  legacy_evidence.py  lingo_coordinator.py  (+22 more)
tests/: conftest.py  test_a2a_adapter.py  test_a2a_replay_v07.py  test_baseline_evaluation.py  test_cluster_discovery.py  test_consensus_campaign.py  test_coordination_agent.py  test_coordination_ledger.py  test_coordination_sdk.py  test_coordination_store.py  test_coordinator_node.py  test_corpus_v04.py  test_defense_evidence.py  test_defense_hardening.py  test_defense_v04.py  test_defense_v05.py  test_defense_v06.py  test_defense_v07.py  test_distributed_coordination.py  test_etcd_client.py  test_evidence_preflight_v05.py  test_feasibility.py  test_hybrid_strategy_validation.py  test_lingo_coordinator.py  test_plan_hydration.py  test_runtime_ablation_study.py  test_semantic_admission.py  test_semantic_admission_v08.py  test_service.py  test_symbolic_plan_compiler.py  test_thesis_evidence.py  test_third_party_a2a.py  test_trace_validation.py
thesis/: README.md  main.tex  uhmasterthesis.cls
thesis/chapters/: abstract.tex  appendices.tex  background.tex  conclusion.tex  discussion.tex  implementation_design.tex  introduction.tex  methodology.tex  results.tex  theoretical_solution.tex
thesis/figures/: linguistic-symbolic-bridge.tex  theoretical-overview.tex  v07-evidence-pipeline.tex  worked-example-task-graph.tex
thesis/notes/: current_behavior_review_and_distributed_plan.md  distributed_coordinator_migration_fine_grained_plan.md  research.md  state_of_the_art_outline_with_references.md  thesis_completion_fine_grained_plan.md
thesis/references/: references.bib
validation/hybrid_strategy/: expected.json  public_cases.json
(+5544 files in other folders)
