[project]
name = "unified-multi-agent-coordination"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.0",
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "lingo-ai==2.0.2",
    "pydantic>=2.12.4",
    "sse-starlette>=3.0.4",
    "uvicorn>=0.38.0",
]

[project.scripts]
unified-coordination-service = "unified_multi_agent_coordination.service:main"
unified-coordination-scenarios = "unified_multi_agent_coordination.end_to_end_scenarios:main"
unified-a2a-fixture-agent = "unified_multi_agent_coordination.a2a_fixture_agent:main"
unified-fixture-registry = "unified_multi_agent_coordination.fixture_registry:main"
unified-docker-system-tests = "unified_multi_agent_coordination.docker_system_tests:main"
unified-local-llm-reference = "unified_multi_agent_coordination.local_llm_reference:main"
unified-thesis-results = "unified_multi_agent_coordination.thesis_results:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unified_multi_agent_coordination"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
